--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 html {
+    background: linear-gradient(180deg, #fff, #ffcdeb);
     height: 100%;
 }
 
@@ -9,21 +10,47 @@ body {
     margin: auto;
 }
 
+.navbar {
+    background-color: #ffffff00;
+}
+
+.section {
+    padding: 0;
+} 
+
+.landing-page {
+    height: 95vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.fas {
+    transform: scale(3.5, 3);
+    color: #ff0099;
+    filter: drop-shadow(0 0 0.5rem #ff0099);
+    animation: fadeIn 1s ease infinite;
+}
+
 .matrix-container {
     display: flex;
     align-items: center;
-    height: 80vh;
+    height: 70vh;
     overflow-y: scroll;
+    width: 100%;
 }
 
 .matrix {
     display: grid;
+    width: 100%;
 }
 
 @media (max-width: 767px) {
     .matrix {
-        max-width: none;
-
+        max-width: 100%;
+        width: 100%;
+        display: block;
     }
 
     .matrix .cell:nth-child(-n+2),
@@ -34,7 +61,7 @@ body {
 
 .row {
     display: flex;
-    flex-basis: 11.1%;
+    /* flex-basis: 11.1%; */
 }
 
 .cell {
@@ -70,6 +97,10 @@ body {
     animation: gradient 15s ease infinite;
 }
 
+#after-landing .hidden-element {
+    transform: translateY(100%);
+}
+
 @keyframes gradient {
 	0% {
 		background-position: 0% 50%;
@@ -81,4 +112,10 @@ body {
 		background-position: 0% 50%;
 	}
 }
+
+@keyframes fadeIn {
+    0% { opacity: 1; }
+    50% { opacity: 0.5; }
+    100% { opacity: 1; }
+  }
 
